--- a/.github/workflows/compile_and_test.yml
+++ b/.github/workflows/compile_and_test.yml
@@ -20,23 +20,28 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix: 
-        os: [ubuntu-latest, macos-latest]
-        compiler: [ g++, clang++ ]
-        #include:
-        #  - os: windows-latest
-        #    compiler: cl
-        #    target: windows
+        system: 
+        - {name: ubuntu - gcc,    os: ubuntu-latest,    flags: -DCMAKE_CXX_COMPILER=g++ -DCMAKE_C_COMPILER=gcc}
+        - {name: ubuntu - clang,  os: ubuntu-latest,    flags: -DCMAKE_CXX_COMPILER=clang++ -DCMAKE_C_COMPILER=clang}
+        - {name: macos - gcc,     os: macos-latest,     flags: -DCMAKE_CXX_COMPILER=g++ -DCMAKE_C_COMPILER=gcc}
+        - {name: macos - clang,   os: macos-latest,     flags: -DCMAKE_CXX_COMPILER=clang++ -DCMAKE_C_COMPILER=clang}
+        - {name: windows - msvc,  os: windows-latest,   flags: -DCMAKE_CXX_COMPILER=cl -DCMAKE_C_COMPILER=cl}
+        compiler: [ g++, clang++, cl ]
 
     steps:
     - name: Checkout Repository
       uses: actions/checkout@v3
 
     - name: Add msbuild to PATH
-      if: ${{ matrix.os == 'windows-latest' }}
+      if: contains(matrix.name, 'msvc')
       uses: microsoft/setup-msbuild@v1.0.2
 
     - name: Compile a release build of TQMesh
-      run: ./scripts/compile_tqmesh.sh ${{ matrix.compiler }} ${{env.BUILD_TYPE}} 2
+      run: |
+        mkdir build
+        cmake -S . -B build ${{ matrix.flags }}
+        cmake --build build -j2
+        make install -j2
 
     - name: Run all of tqmeshs tests.
       run: ./scripts/test_tqmesh.sh
