--- a/.github/workflows/compile_and_test.yml
+++ b/.github/workflows/compile_and_test.yml
@@ -17,27 +17,28 @@ defaults:
 jobs:
   build_and_test:
     name: Build & test TQMesh on ${{ matrix.os }} with ${{ matrix.compiler }}.
-    runs-on: ${{ matrix.name }}
+    runs-on: ${{ matrix.platform.name }}
     strategy:
       matrix: 
-        - {name: ubuntu - gcc,    os: ubuntu-latest,    flags: -DCMAKE_CXX_COMPILER=g++ -DCMAKE_C_COMPILER=gcc}
-        - {name: ubuntu - clang,  os: ubuntu-latest,    flags: -DCMAKE_CXX_COMPILER=clang++ -DCMAKE_C_COMPILER=clang}
-        - {name: macos - gcc,     os: macos-latest,     flags: -DCMAKE_CXX_COMPILER=g++ -DCMAKE_C_COMPILER=gcc}
-        - {name: macos - clang,   os: macos-latest,     flags: -DCMAKE_CXX_COMPILER=clang++ -DCMAKE_C_COMPILER=clang}
-        - {name: windows - msvc,  os: windows-latest,   flags: -DCMAKE_CXX_COMPILER=cl -DCMAKE_C_COMPILER=cl}
+        platform:
+          - {name: ubuntu - gcc,    os: ubuntu-latest,    flags: -DCMAKE_CXX_COMPILER=g++ -DCMAKE_C_COMPILER=gcc}
+          - {name: ubuntu - clang,  os: ubuntu-latest,    flags: -DCMAKE_CXX_COMPILER=clang++ -DCMAKE_C_COMPILER=clang}
+          - {name: macos - gcc,     os: macos-latest,     flags: -DCMAKE_CXX_COMPILER=g++ -DCMAKE_C_COMPILER=gcc}
+          - {name: macos - clang,   os: macos-latest,     flags: -DCMAKE_CXX_COMPILER=clang++ -DCMAKE_C_COMPILER=clang}
+          - {name: windows - msvc,  os: windows-latest,   flags: -DCMAKE_CXX_COMPILER=cl -DCMAKE_C_COMPILER=cl}
 
     steps:
     - name: Checkout Repository
       uses: actions/checkout@v3
 
     - name: Add msbuild to PATH
-      if: contains(matrix.name, 'msvc')
+      if: contains(matrix.platform.name, 'msvc')
       uses: microsoft/setup-msbuild@v1.0.2
 
     - name: Compile a release build of TQMesh
       run: |
         mkdir build
-        cmake -S . -B build ${{ matrix.flags }}
+        cmake -S . -B build ${{ matrix.platform.flags }}
         cmake --build build -j2
         make install -j2
 
