--- a/.github/workflows/compile_and_test.yml
+++ b/.github/workflows/compile_and_test.yml
@@ -16,7 +16,7 @@ defaults:
 
 jobs:
   build_and_test:
-    name: Build & test TQMesh on ${{ matrix.platform.name }}.
+    name: Build & test TQMesh on ${{ matrix.platform.name }}
     runs-on: ${{ matrix.platform.os }}
     strategy:
       matrix: 
@@ -37,10 +37,9 @@ jobs:
 
     - name: Compile a release build of TQMesh
       run: |
-        mkdir build
-        cmake -S . -B build ${{ matrix.platform.flags }}
-        cmake --build build -j2
-        make install -j2
+        cmake -S . -B bin ${{ matrix.platform.flags }}
+        cmake --build bin -j2
+        cmake --install bin -j2
 
     - name: Run all of tqmeshs tests.
       run: ./scripts/test_tqmesh.sh
