--- a/.github/workflows/compile_and_test.yml
+++ b/.github/workflows/compile_and_test.yml
@@ -43,7 +43,7 @@ jobs:
 
     - name: Compile a release build of TQMesh
       run: |
-        cmake -S . -B bin ${{ matrix.platform.flags }}
+        cmake -S . -B bin ${{ matrix.platform.flags }} -DCMAKE_BUILD_TYPE=${{ BUILD_TYPE }}
         cmake --build bin -j2
         cmake --install bin
 
