--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,7 +28,7 @@ if (CMAKE_BUILD_TYPE MATCHES "Release")
     add_compile_definitions("_USE_MATH_DEFINES")
     if (MSVC)
       set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -bigobj")
-    else()
+    elseif (CMAKE_CXX_COMPILER_ID STREQUAL GNU)
       set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wa,-mbig-obj")
     endif()
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2")
@@ -50,7 +50,7 @@ if (CMAKE_BUILD_TYPE MATCHES "Debug")
     add_compile_definitions("_USE_MATH_DEFINES")
     if (MSVC)
       set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -bigobj")
-    else()
+    elseif (CMAKE_CXX_COMPILER_ID STREQUAL GNU)
       set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wa,-mbig-obj")
     endif()
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Od")
