--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,8 +28,6 @@ if (CMAKE_BUILD_TYPE MATCHES "Release")
     add_compile_definitions("_USE_MATH_DEFINES")
     if (MSVC)
       set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -bigobj")
-    elseif (CMAKE_CXX_COMPILER_ID STREQUAL GNU)
-      set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wa,-mbig-obj")
     endif()
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2")
   else()
@@ -40,9 +38,6 @@ if (CMAKE_BUILD_TYPE MATCHES "Release")
   endif()
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DNDEBUG")
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DTQMESH_USE_EXPRTK")
-
-  # --- For performance measuring only ---
-  #set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pg")
 endif()
 
 if (CMAKE_BUILD_TYPE MATCHES "Debug")
@@ -50,8 +45,6 @@ if (CMAKE_BUILD_TYPE MATCHES "Debug")
     add_compile_definitions("_USE_MATH_DEFINES")
     if (MSVC)
       set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -bigobj")
-    elseif (CMAKE_CXX_COMPILER_ID STREQUAL GNU)
-      set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wa,-mbig-obj")
     endif()
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Od")
   else()
@@ -60,7 +53,9 @@ if (CMAKE_BUILD_TYPE MATCHES "Debug")
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wunused-variable")
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wsign-compare")
   endif()
-  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pg")
+  if (CMAKE_CXX_COMPILER_ID STREQUAL GNU)
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pg")
+  endif()
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DTQMESH_USE_EXPRTK")
 endif()
 
