--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,6 +45,8 @@ if (CMAKE_BUILD_TYPE MATCHES "Debug")
     add_compile_definitions("_USE_MATH_DEFINES")
     if (MSVC)
       set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -bigobj")
+    elseif (CMAKE_CXX_COMPILER_ID STREQUAL GNU)
+      set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wa,-mbig-obj")
     endif()
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Od")
   else()
