--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,6 +28,8 @@ if (CMAKE_BUILD_TYPE MATCHES "Release")
     add_compile_definitions("_USE_MATH_DEFINES")
     if (MSVC)
       set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -bigobj")
+    elseif(CMAKE_CXX_COMPILER_ID STREQUAL GNU)
+      set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wa,-mbig-obj")
     endif()
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2")
   else()
@@ -57,7 +59,7 @@ if (CMAKE_BUILD_TYPE MATCHES "Debug")
   endif()
   if (CMAKE_CXX_COMPILER_ID STREQUAL GNU)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pg")
-  endif()
+  endif
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DTQMESH_USE_EXPRTK")
 endif()
 
